ALFREDAPI-548 [Update] jaxb-api issues   * Reverted JAcksonObjectMapper fix.